--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://ambikadevithota5.github.io/extraordinary-app",
+  "homepage": "https://ambika-devi.github.io/extraordinary-app/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@apollo/client": "^4.0.9",
